<resources>
    <string name="app_name">FoodEaTORider</string>
    <string name="InfoTitle">Information</string>

    <!-- Main Activity (Empty) -->
    <string name="default_user_name">Insert username</string>
    <string name="default_user_email">Insert email</string>
    <string name="default_user_description">Insert short description</string>
    <string name="default_user_phone_number">Insert phone number</string>

    <!-- Field -->
    <string name="name_field_id">user_name</string>
    <string name="email_field_id">user_email</string>
    <string name="pwd_field_id">user_password</string>
    <string name="phone_number__field_id">user_phone_number</string>
    <string name="description_field_id">user_description</string>


    <!-- Modify Activity -->
    <string name="username_title">Username</string>
    <string name="email_title">Email</string>
    <string name="phone_number_title">Phone number</string>
    <string name="description_title">Description</string>
    <string name="password_title">Change Password</string>
    <string name="insert_old_password">Insert your actual password</string>
    <string name="insert_password">Insert the new password</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="different_password">The two password are different</string>
    <string name="insert_username">Type your username</string>
    <string name="insert_email">Type your email address</string>
    <string name="insert_phone_number">Type your phone number</string>
    <string name="insert_description">Type a short description about you</string>

    <!-- Generic -->
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>


    <!-- Image Profile -->
    <string name="select_photo">Select photo</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="cancel_string">Cancel</string>
    <string name="image_disappear">The selected image is no longer available</string>

    <!-- Permission -->
    <string name="perm_needed">Permission needed</string>
    <string name="perm_why_1">This permission is needed to pick a photo from gallery</string>
    <string name="perm_why_2">This permission is needed to take photo</string>
    <string name="ok_string">Ok</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="title_activity_task">MainActivity</string>
    <string name="reservation_title">FoodEaTO</string>
    <string name="action_settings">Information</string>

    <!-- reservation_item.xml-->
    <string name="refuse_reservation_button">Refuse</string>
    <string name="accept_reservation_button">Accept</string>

    <!-- firebase-->
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_biker">Remove biker</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_settings_firebase">Firebase Account</string>

    <!-- activity_signup_biker-->
    <string name="biker_name">Biker name</string>
    <string name="biker_phone">Phone number</string>
    <string name="biker_description">Your description</string>
    <string name="complete_rest_btn">Complete registration</string>
    <string name="username_updated">Username is updated.</string>
    <string name="username_failed_update">Failed to update username!</string>
    <string name="invalid_username">Invalid username. Use minimum 3 characters</string>
    <string name="email_updated">Email address is updated. Please sign in with new email id!</string>
    <string name="email_failed_updated">Failed to update email!</string>
    <string name="phone_updated">Phone number is updated.</string>
    <string name="phone_failed_updated">Failed to update phone number!</string>
    <string name="invalid_mail">Enter valid email address!</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="enter_email">Enter email address!</string>
    <string name="became_biker">Became a biker!</string>
    <string name="became_biker2">Do you want to became a biker?</string>
    <string name="welcome_biker">Welcome among bikers!</string>
    <string name="logout_title">Log out</string>
    <string name="password_failed_updated">Failed to update password!</string>
    <string name="create_profile_failed">Error in creating your profile.</string>
    <string name="sign_up">Sign up</string>

    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="location">Start/stop working</string>
    <string name="startLocation">Start Working</string>
    <string name="stopLocation">Stop Working</string>
    <string name="completed_reservations_activity_title">Completed reservations</string>
    <string name="conclude_delivery">Conclude delivery</string>
    <string name="set_your_status">Set your status</string>
    <string name="working_status">Working status</string>
    <string name="msg_start_working">Switch ON to start working.</string>
    <string name="msg_conn_working">Keep network connection up to receive delivery requests!</string>
    <string name="msg_not_available_working">Switching OFF you will not receive new delivery requests.</string>
    <string name="msg_remeber_switch_off">To stop working switch OFF otherwise you will continue to receive delivery requests and you MUST complete them.</string>
    <string name="msg_no_delivery">Waiting for delivery request…\nKeep network connection up to be able to receive a new request.</string>
    <string name="alert_connection_start">CHECK your CONNECTION. Your status cannot be recovered now but it will be automatically synchronized when your connection will be active.</string>
    <string name="msg_waiting_status">Waiting for synchronization…\nKeep your connection up.</string>
    <string name="msg_status_off">Your status is set to OFF. Turn your status ON to start working.</string>
    <string name="msg_wrong_code">The delivery cannot be completed because the code you\'ve inserted is wrong! Try again</string>
    <string name="msg_tracking_activated">Tracking system activated</string>
    <string name="status_actually_changed">You will be informed when your status has actually changed.</string>
    <string name="toast_status_on">Status ON. Wait for delivery requests.</string>
    <string name="toast_status_off">Status OFF. You will not receive new delivery requests.</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_completed_reservations">Completed reservations</string>
    <string name="action_status">Status</string>
    <string name="statistics_activity_title">Statistics</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="contentDescription">TODO</string>

</resources>
